--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fortawesome/free-regular-svg-icons": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.1",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
